--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <h1>To-Do List</h1>
       <div class="input-section">
           <input type="text" id="taskInput" placeholder="Enter a task" />
-          <button id="addTaskBtn">Add</button>
+          <button onclick="addTaskBtn()">Add</button>
       </div>
-    <ul id="taskList"></ul>
+    <ul id="taskList">
+    </ul>
   </div>
 </div>
   <script src="scripts/main.js"></script>
